# finanzas

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
scripts/: migrate_sqlite_to_supabase.py
seeds/: categories.yaml  rules.yaml
src/finanzas/: __init__.py  __main__.py  app.py  auth.py  categorizer.py  db.py  ingest.py  insights.py  models.py  queries.py  recurring.py  storage.py  upload_worker.py
src/finanzas/parsers/: __init__.py  base.py  bbva_pdf.py  dispatch.py  galicia_pdf.py  santander_pdf.py  santander_xlsx.py
src/finanzas/templates/: base.html  buscar.html  categories.html  cuotas.html  dashboard.html  login.html  manual.html  pendientes.html  review.html  upload.html
src/finanzas/templates/partials/: cat_form_tr.html  category_detail.html  category_row.html  note_form_tr.html  share_form_tr.html  tx_actions.html
tests/: test_categorizer.py  test_parsers.py  test_recurring.py
