[project]
name = "finanzas"
version = "0.1.0"
description = "App local de finanzas personales: parsea resúmenes de tarjeta, categoriza, detecta gastos fijos y muestra dashboard"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Federico del Franco" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "plotly>=5.24",
    "python-dateutil>=2.9",
    "psycopg2-binary>=2.9",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "supabase>=2.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
finanzas = "finanzas.__main__:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
